--- a/MyHouse/FrontEnd/package.json
+++ b/MyHouse/FrontEnd/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.3.5",
     "pinia": "^2.0.32",
+    "sweetalert": "^2.1.2",
+    "tw-elements": "^1.0.0-beta2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
